ID: US5701 Name: Potential Candidate: Android: Delete Payees
Tested:
Navigate to Payee Modal
Verify Payee Modal matches comps
Verify User can navigate to faq from Delete Payee Modal
Verify rotation on Payee Modal
Verify screen off/on on Payee modal
Verify back press on Payee Modal
Verify minimize app from payee modal
Verify Delete This Payee sends request to delete payee
Verify delete complete message displayed over payee list when a payee is deleted
Verify rotation while complete message is displayed
Verify minimize/maximize application while delete complete message is displayed

--- a/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
@@ -103,11 +103,12 @@
                 style="@style/call_to_action_theme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:minWidth="@dimen/action_button_min_width"
                 android:layout_below="@+id/note_text_msg"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/between_related_elements_padding"
-                android:layout_marginTop="@dimen/groups_of_elements_padding"
+                android:layout_marginTop="@dimen/orange_button_margin_top"
                 android:drawablePadding="@dimen/between_related_elements_padding"
                 android:text="@string/action_button" />
 
