--- a/Discover-Bank-Phone/res/values/strings_bank_payees.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payees.xml
@@ -37,4 +37,14 @@
 	<string name="bank_dollar_sign">$</string>
 	<string name="bank_deposit_amount">Deposit Amount</string>
 	<string name="bank_payee_empty">You currently have no payees set up.</string>
+	
+	<!-- Delete Payee Modal Strings -->
+	<string name="bank_payee_delete_title">Delete Payee?</string>
+	<string name="bank_payee_delete_body">Are you sure you want to delete this payee? Any future payments that have been scheduled for this payee will be cancelled. Any existing repeating payments for this payee will be deleted.</string>
+	<string name="bank_payee_delete_action">Delete This Payee</string>
+	<string name="bank_payee_delete_link">Do Not Delete This Payee</string>
+	<string name="bank_payee_delete_confirm">The payee has been deleted.</string>
+	<string name="bank_payee_action_edit">Edit</string>
+	<string name="bank_payee_action_delete">Delete</string>
+
 </resources>
