--- a/Discover-Bank-Phone/res/layout/select_payee.xml
+++ b/Discover-Bank-Phone/res/layout/select_payee.xml
@@ -11,25 +11,37 @@
         android:paddingBottom="@dimen/forms_inner_padding"
         android:paddingLeft="@dimen/forms_inner_padding" >
 
-        
-        
-        <TextView
-            android:id="@+id/select_payee_title"
-            style="@style/page_title"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="@dimen/table_inner_padding"
-            android:layout_marginRight="@dimen/forms_inner_padding"
-            android:layout_marginTop="@dimen/groups_of_elements_padding"
-            android:text="@string/select_payee_title" />        
-
+         <LinearLayout
+              android:id="@+id/page_header"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal"
+              android:layout_alignParentLeft="true"
+              android:layout_alignParentTop="true"
+              android:layout_marginBottom="@dimen/table_inner_padding"
+              android:layout_marginRight="@dimen/forms_inner_padding"
+              android:layout_marginTop="@dimen/groups_of_elements_padding">
+             
+              <com.discover.mobile.bank.ui.widgets.StatusMessageView
+	            android:id="@+id/status"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="@dimen/forms_inner_padding"
+	            android:layout_marginBottom="@dimen/forms_inner_padding"/>
+              
+              <TextView
+	            android:id="@+id/select_payee_title"
+	            style="@style/page_title"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:text="@string/select_payee_title" />                 
+         </LinearLayout>
+           
         <LinearLayout
             android:id="@+id/content"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/select_payee_title"
+            android:layout_below="@+id/page_header"
             android:orientation="vertical" >
             
             <TextView
@@ -37,7 +49,6 @@
             style="@style/error_static_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/select_payee_title"
             android:text="@string/schedule_pay_canceled"
             android:paddingBottom="@dimen/between_related_elements_padding"
             android:visibility="gone" />
