US7224 - Updates to Toggle widget. Increased click area of icon and X. Updated backpress behavior.

--- a/Discover-Bank-Phone/res/layout/status_bar.xml
+++ b/Discover-Bank-Phone/res/layout/status_bar.xml
@@ -26,6 +26,8 @@
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/account_name"
         android:paddingLeft="@dimen/nav_section_pading"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
         android:src="@drawable/bank_gray_icon" />
 
     <ImageView
