--- a/Discover-Commons/res/layout/account_toggle.xml
+++ b/Discover-Commons/res/layout/account_toggle.xml
@@ -25,6 +25,8 @@
                 android:layout_centerVertical="true"
                 android:paddingLeft="21dp"
                 android:text="@string/toggle_select_account" />
+            
+            <!-- Padding assists with click area (X) -->
 
             <ImageView
                 android:id="@+id/acct_toggle_x"
@@ -32,17 +34,20 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
                 android:paddingRight="25dp"
+                android:paddingTop="10dp"
                 android:src="@drawable/x_gray" />
         </RelativeLayout>
 
         <View
             android:id="@+id/acct_toggle_divider"
             android:layout_width="match_parent"
-            android:layout_marginRight="9dp"
-            android:layout_marginLeft="9dp"
             android:layout_height="@dimen/divider_height"
             android:layout_below="@id/acct_toggle_title_section"
+            android:layout_marginLeft="9dp"
+            android:layout_marginRight="9dp"
             android:background="@drawable/gray_solid_line" />
 
         <!-- Card -->
@@ -60,8 +65,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="3dp"
                 android:paddingLeft="21dp"
-                android:visibility="invisible"
-                android:src="@drawable/black_check_mark" />
+                android:src="@drawable/black_check_mark"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/acct_toggle_card_text"
@@ -92,9 +97,9 @@
             android:id="@+id/acct_toggle_dash_divider"
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:layout_marginRight="9dp"
-            android:layout_marginLeft="9dp"
             android:layout_below="@id/acct_toggle_card_section"
+            android:layout_marginLeft="9dp"
+            android:layout_marginRight="9dp"
             android:background="@drawable/gray_dash_line" />
 
         <!-- Bank -->
