--- a/Discover-Commons/res/layout/single_item_table_cell.xml
+++ b/Discover-Commons/res/layout/single_item_table_cell.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:textStyle="bold"
         style="@style/body_copy"
         android:text="@string/edit" />
 
