--- a/Discover-Bank-Phone/res/layout/bank_list.xml
+++ b/Discover-Bank-Phone/res/layout/bank_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/light_gray_bkgrd"
     android:orientation="vertical" >
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
@@ -9,10 +10,17 @@
         android:id="@+id/bank_table"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/light_gray_bkgrd"
-        android:listSelector="@android:color/transparent" 
-        ptr:ptrDrawable="@null"
-        ptr:ptrShowIndicator="false"
-        android:cacheColorHint="@android:color/transparent"/>
+        android:layout_above="@+id/footer"
+        android:layout_alignParentTop="true"
+        android:cacheColorHint="@android:color/transparent"
+        android:listSelector="@android:color/transparent"
+        ptr:ptrHeaderTextColor="@color/orange_link_idicator"
+        ptr:ptrAnimationStyle="flip" />
 
-</LinearLayout>
+    <com.discover.mobile.bank.ui.table.TableLoadMoreFooter
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
+
+</RelativeLayout>
