--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -10,5 +10,30 @@
     <string name="transfer_money_not_eligible_title">Sign Up for Transfer Money</string>
     <string name="transfer_money_not_eligible_body">Enjoy the ease and convenience of Transferring Money between two accounts.\n\nTo start, simply have a total of two accounts with one internal account.</string>
     <string name="open_an_account">Open an Account</string>
+    <string name="frequency_title">Frequency</string>
+    
+    <string-array name="transfer_frequency_strings">
+        <item>One Time</item>
+        <item>Weekly</item>
+        <item>Every Two Weeks</item>
+        <item>Monthly</item>
+        <item>Every Two Months</item>
+        <item>Twice a Year</item>
+        <item>Three Times a Year</item>
+        <item>Quarterly</item>
+        <item>Annually</item>
+    </string-array>
+    
+    <string-array name="transfer_frequency_codes">
+        <item>one_time</item>
+        <item>weekly</item>
+        <item>every_two_weeks</item>
+        <item>monthly</item>
+        <item>every_two_months</item>
+        <item>twice_a_year</item>
+        <item>three_times_a_year</item>
+        <item>quarterly</item>
+        <item>annually</item>
+    </string-array>
     
 </resources>
