DE2318 : During testing, the loading progress indicator was not visible on some baseilne devices. This has been fixed.

--- a/Discover-Bank-Phone/res/layout/spinner_layout.xml
+++ b/Discover-Bank-Phone/res/layout/spinner_layout.xml
@@ -6,11 +6,10 @@
     android:orientation="vertical" >
 
     <ProgressBar
-        android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyleLarge"
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLargeInverse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
