--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -31,10 +31,10 @@
 	<string name="review_payments_filter_three">Amount</string>
 	<string name="review_payments_scheduled_payments">Scheduled\nPayments</string>
 	<string name="review_payments_completed_payments">Completed\nPayments</string>
-	<string name="review_payments_canceled_payments">Canceled\nPayments</string>
+	<string name="review_payments_canceled_payments">Cancelled\nPayments</string>
 	<string name="review_payments_scheduled_payments_empty">You have no scheduled payments.</string>
 	<string name="review_payments_completed_payments_empty">You have no completed payments.</string>
-	<string name="review_payments_canceled_payments_empty">You have no canceled payments.</string>
+	<string name="review_payments_canceled_payments_empty">You have no cancelled payments.</string>
 	<string name="review_payments_scheduled_deleted">Scheduled Payment Deleted</string>
 	
 	<!-- Manage Payees Strings  -->
@@ -59,7 +59,7 @@
  	<string name="schedule_pay_cancel_title">Cancel This Action?</string>
  	<string name="schedule_pay_cancel_body">Are you sure you want to cancel? All information you have entered will be lost.</string>
  	<string name="schedule_pay_cancel_button_confirm">Cancel This Action</string>
- 	<string name="schedule_pay_canceled">Transaction Canceled</string>
+ 	<string name="schedule_pay_canceled">Transaction Cancelled</string>
  	<string name="schedule_pay_date_picker_title">Enter Payment Date</string>
  	<string name="schedule_pay_duplicate_payment">Duplicate Payment</string>
  	<string name="schedule_pay_invalid_date">Invalid Date</string>
