ID: US7223 - Potential Candidate: Android: Custom Calendar
Tested:
Verify Bank API does not show error dialogs for  exceptions or errors when it fails
Verify Bank Holiday Download does not show error dialogs or exceptions when it fails
Verify able to login after logout (Needs to remember links download during splash screen
Verify Progress dialog is not started for Bank API links download
Verify Customer Service Hardcoded URL used when Bank API Service Call fails.
Verify Bank Holiday is called if bank holiday values are not when user attempts to paybill
Verify onBackPress the calendar is closed and the date on Payment Details remains unchanged
Verify user can navigate through the calendar using navigation arrows
Verify disable dates are rendered correctly on rotation
Verify title is rendered correctly on rotation
Verify today's date is rendered correctly on rotation
Verify the selected month is the same month on rotation

--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -60,7 +60,7 @@
  	<string name="schedule_pay_cancel_body">Are you sure you want to cancel? All information you have entered will be lost.</string>
  	<string name="schedule_pay_cancel_button_confirm">Cancel This Action</string>
  	<string name="schedule_pay_canceled">Transaction Cancelled</string>
- 	<string name="schedule_pay_date_picker_title">Enter Payment Date</string>
+ 	<string name="schedule_pay_date_picker_title">Deliver by Date</string>
  	<string name="schedule_pay_duplicate_payment">Duplicate Payment</string>
  	<string name="schedule_pay_invalid_date">Invalid Date</string>
 </resources>
