--- a/Discover-Commons/res/values/color.xml
+++ b/Discover-Commons/res/values/color.xml
@@ -80,9 +80,9 @@
     <color name="caldroid_gray">#CCC</color>
     <color name="caldroid_darker_gray">#aaa</color>
     <!-- A light Holo shade of blue -->
-    <color name="caldroid_holo_blue_light">#ff33b5e5</color>
+    <color name="caldroid_holo_blue_light">#FD6C04</color>
     <!-- A dark Holo shade of blue -->
-    <color name="caldroid_holo_blue_dark">#ff0099cc</color>
+    <color name="caldroid_holo_blue_dark">#FD6C04</color>
     <!-- A really bright Holo shade of blue -->
-    <color name="caldroid_sky_blue">#FFA3E8F7</color>
+    <color name="caldroid_sky_blue">#FD6C04</color>
 </resources>
