--- a/Discover-Bank-Phone/res/layout/bank_atm_modal_top.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_modal_top.xml
@@ -133,7 +133,7 @@
             android:layout_height="@dimen/atm_modal_pin_height"
             android:layout_below="@+id/line3"
             android:paddingTop="@dimen/atm_modal_icon_padding"
-            android:src="@drawable/atm_orange_pin" />
+            android:src="@drawable/atm_orange_pin_sm" />
 
         <TextView
             android:id="@+id/surcharge_title"
@@ -169,7 +169,7 @@
             android:layout_height="@dimen/atm_modal_pin_height"
             android:layout_below="@+id/line4"
             android:paddingTop="@dimen/atm_modal_icon_padding"
-            android:src="@drawable/atm_gray_pin" />
+            android:src="@drawable/atm_drk_pin_sm" />
 
         <TextView
             android:id="@+id/non_surcharge_title"
