ID: US5381 - Potential Candidate: Android: Edit Payment
Tested:
- Verify Date is maintain after rotation
- Verify Calendar displays the selected date even after rotation
- Verify Cancel Modal displayed on back press
- Verify Cancel Modal on cancel
- Verify Navigation to Payment Detail if back press after answering Cancel Modal Yes
- Verify Request sent out when  pressed Save
- Verify text for button shows correctly for edit as opposed to add
- Verify the right payee is selected as well as on rotation
- Verify help widget works
- Verify Calendar shows selected date in orange and if user selects a different date it toggles to newly selected date and dismisses modal

--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -63,4 +63,7 @@
  	<string name="schedule_pay_date_picker_title">Deliver by Date</string>
  	<string name="schedule_pay_duplicate_payment">Duplicate Payment</string>
  	<string name="schedule_pay_invalid_date">Invalid Date</string>
+ 	
+ 	<!-- Edit Payments -->
+ 	<string name="schedule_pay_save_payment">Save Payment</string>
 </resources>
