--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -21,7 +21,7 @@
         android:layout_centerInParent="true"
         android:paddingTop="@dimen/splash_progress_toppadding" />
 
-    <com.discover.mobile.bank.login.NonFocusingScrollView
+    <com.discover.mobile.common.ui.widgets.NonFocusingScrollView
         android:id="@+id/login_pane"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -341,7 +341,7 @@
                 android:layout_below="@+id/login_table"
                 android:visibility="invisible" />
         </RelativeLayout>
-    </com.discover.mobile.bank.login.NonFocusingScrollView>
+    </com.discover.mobile.common.ui.widgets.NonFocusingScrollView>
 
     <LinearLayout
         android:id="@+id/login_bottom_button_row"
