--- a/Discover-Commons/res/layout/calendar_title_header.xml
+++ b/Discover-Commons/res/layout/calendar_title_header.xml
@@ -5,15 +5,17 @@
    	android:layout_height="wrap_content"
     android:orientation="vertical"
     android:fitsSystemWindows="true">
-    <TextView android:id="@+id/title" style="@style/DialogWindowTitle"
+ 
+    <!--  android:minHeight="64dip" -->
+    <TextView android:id="@+id/title"      
+        style="@style/calendar_title_style"
+        android:textSize="@dimen/title_min"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="64dip"
-        android:paddingLeft="16dip"
-        android:paddingRight="16dip"
-        android:gravity="center_vertical|left" />
-    <View android:id="@+id/titleDivider"
-            android:layout_width="match_parent"
-            android:layout_height="2dip"
-            android:background="@android:color/darker_gray" />
+        android:layout_height="wrap_content"/>
+    
+	<View android:id="@+id/titleDivider"
+          android:layout_width="match_parent"
+          android:layout_height="2dip"
+          android:visibility="gone"
+          android:background="@android:color/darker_gray" /> 
 </LinearLayout>
