--- a/Discover-Bank-Phone/res/layout-land/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout-land/bank_atm_map.xml
@@ -10,8 +10,8 @@
         android:id="@+id/discover_map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true" />
+        android:layout_below="@+id/full_search_bar"
+        android:layout_alignParentBottom="true" />
 
     <FrameLayout
         android:id="@+id/discover_list"
