--- a/Discover-Bank-Phone/res/layout/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_map.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true" />
+        android:layout_below="@+id/full_search_bar" />
 
     <FrameLayout
         android:id="@+id/discover_list"
@@ -19,24 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
         android:layout_below="@+id/full_search_bar"/>
-    <!--
-    <fragment
-        android:id="@+id/discover_map"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/drop_shadow"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"
-        class="com.google.android.gms.maps.SupportMapFragment" />
 
-    <fragment
-        android:id="@+id/discover_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/drop_shadow"
-        android:layout_below="@+id/full_search_bar"
-        class="com.discover.mobile.bank.atm.AtmListFragment" />
-    -->
 
     <com.discover.mobile.bank.atm.AtmLocatorMapSearchBar
         android:id="@+id/full_search_bar"
