ID: US3618 - Add Unmanaged Payees
Tested:
Enter Payee Name -- User must enter text into the Payee / Company Name input field Keyboard pops up for user to enter text
Enter Payee Name - Remove the feature, "Do you have an account with them?" and the ability to select Yes or No
Select Payee - If there is no match for the searched payee then show 5.3 Add New Payee - Managed Verified Payee/Managed Payee - No Matches and user can tap "Enter Payee Details" button
Payee Details - Payee Name (Pre populated with user's step 3 selected payee) - (No caret and un-editable) (Managed Payee Only)
Payee Details - Nickname -required
Pre-populated with the Payee Name (Managed Payee Only)
Keyboard pops up for user to enter nickname (Managed Payee Only)
User can only use letters A-Z, no punctuation or numbers
Payee Details -Phone User taps and enters a 10 digit phone number, including area code first
Payee Details -Address User taps and keyboard pops up
Payee Details -City User taps and keyboard pops up
Payee Details -State User selects state from a selected list
Payee Details -Zip Code -required Numeric keyboard pops up for user to enter zipcode
Payee Details -Account #/ Memo (optional) Alpha-numeric Keyboard pops up for user to enter account # Default to the numeric portion of the keyboard
Payee Details - Add Payee Button (User can tap add payee button and it will bring them to step 5.
Navigation - User can navigate to Log Out
Navigation - User can navigate to the sliding drawer navigation by tapping menu icon
Navigation - Android Only: Back button should take the user to the Add a Payee search page.
Navigation - To Help / Faq Page
Rotation / Minimize / Screen On-Off
Manage Payees - Select Payee - Whether the user has existing payees or no payees, the user will tap on "Add New Payee" button to launch the workflow The user can select the "Add New Payee" button and it will bring them to Enter Payee Name (Step 2) of the process.
Pay Bills - Select Payee -If the user attempts to enter the

--- a/Discover-Bank-Phone/res/values/strings_bank_payees.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payees.xml
@@ -49,6 +49,7 @@
 
 	<!-- Add Unmanaged Payee Details Strings -->
 	<string name="bank_payee_phone_number">Phone #</string>
+	<string name="bank_payee_address">Address</string>
 	<string name="bank_payee_address_line1">Address Line 1</string>
 	<string name="bank_payee_address_line2">Address Line 2 (Optional)</string>
 	<string name="bank_payee_city">City</string>
