--- a/Discover-Bank-Phone/res/layout-land/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout-land/bank_atm_search_nearby.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/full_search_bar"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true" 
+        android:layout_alignParentTop="true"/>
 
     <FrameLayout
         android:id="@+id/discover_list"
