--- a/Discover-Bank-Phone/res/layout/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_map.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/drop_shadow"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/full_search_bar" />
+        android:layout_alignParentTop="true"/>
 
     <FrameLayout
         android:id="@+id/discover_list"
