--- a/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/full_search_bar"
         android:layout_above="@+id/drop_shadow"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true" 
+        android:layout_alignParentTop="true"/>
 
     <FrameLayout
         android:id="@+id/discover_list"
