--- a/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
@@ -49,11 +49,20 @@
             android:layout_marginBottom="@dimen/groups_of_elements_padding"
             android:orientation="vertical" />
 
+         <TextView
+            android:id="@+id/none_above"
+            style="@style/normal_static_text"     
+            android:layout_below="@+id/payee_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/table_inner_padding"
+            android:text="@string/bank_payee_none" />
+         
         <com.discover.mobile.bank.paybills.SimpleChooseListItem
             android:id="@+id/enter_payee_details"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/payee_list"
+            android:layout_height="wrap_content"           
+            android:layout_below="@+id/none_above"
         />
         
         <com.discover.mobile.common.help.HelpWidget
