--- a/Discover-Bank-Phone/res/values/strings_bank_payees.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payees.xml
@@ -37,6 +37,7 @@
 	<string name="bank_dollar_sign">$</string>
 	<string name="bank_deposit_amount">Deposit Amount</string>
 	<string name="bank_payee_empty">You currently have no payees set up.</string>
+	<string name="bank_payee_none">None of the above</string>
 	
 	<!-- Delete Payee Modal Strings -->
 	<string name="bank_payee_delete_title">Delete Payee?</string>
