DE3900 - Updated the text to include a question mark at the end

--- a/Discover-Bank-Phone/res/values/strings_faq_check_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_faq_check_deposit.xml
@@ -50,7 +50,7 @@
     </string>
     
     <string name="no_smartphone_title">
-    	What if I don’t have an Apple® or Android™ smartphone
+    	What if I don’t have an Apple® or Android™ smartphone?
     </string>
     <string name="no_smartphone_body">
         Presently the Mobile Check Deposit service is only available on these brand smartphones.
